--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
-body {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap');
+
+body,
+html {
     margin: 0;
     padding: 0;
+    height: 100%;
 }
