--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -1,7 +1,4 @@
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
-
 <div class="InicioBody">
   <div class="WelcomeSearch">
     <div style="padding: 48px 80px 48px 80px">
@@ -24,8 +21,8 @@
       <div class="PM_Scroller">
 
         <div *ngFor="let item of PMdataR" class="PM_Scroller_Item Card">
-          <!--  AQUÍ SE AGREGA EL LINKEO A CUANDO SE CLICKEE CADA IMAGEN  -->
-          <a href="">
+
+          <a href="/detalles?movieId={{item.id}}">
             <img class="card-img-top" src="https://image.tmdb.org/t/p/w500/{{item.poster_path}}" alt="Card">
 
             <h2 class="card-title">{{item.title}}</h2>
@@ -47,9 +44,9 @@
       <div class="RT_Scroller">
         <div *ngFor="let item of RTmovieKeyList; index as i" class="RT_Scroller_Item Card">
           <div *ngIf="RTmovieKeyList[i]">
-            <iframe width="460" height="240" [src]="item" allowfullscreen></iframe>
+            <iframe width="460" height="240" [src]="item" allowfullscreen frameBorder="0"></iframe>
           </div>
-          
+
         </div>
 
       </div>
