Integrate busqueda component

--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -4,12 +4,8 @@
     <div style="padding: 48px 80px 48px 80px">
       <h1>Bienvenido</h1>
       <h2>Millones de películas para descubrir. Explorar ahora</h2>
-      <div style="padding: 47px 0px 47px 0px">
-        <!--  AQUÍ SE AGREGA EL LINKEO A CUANDO SE REALICE UNA BÚSQUEDA  -->
-        <form class="SearchForm" method="post" action="#">
-          <input class="SearchInput form-control form-control-lg" type="text" placeholder="Busca una película...">
-          <button class="SearchButton" type="submit">Buscar</button>
-        </form>
+      <div>
+        <app-busqueda></app-busqueda>
       </div>
     </div>
   </div>
