--- a/src/app/componentes/busqueda/busqueda.component.css
+++ b/src/app/componentes/busqueda/busqueda.component.css
@@ -1,6 +1,4 @@
 .content {
-    margin-right: 100px;
-    margin-left: 100px;
     margin-top: 40px;
 }
 
@@ -39,6 +37,7 @@ form {
     font-size: 15px;
     font-weight: bold;
     margin-top: 40px;
+    color: white;
 }
 
 ul {
@@ -51,6 +50,7 @@ li {
     margin-bottom: 20px;
     box-shadow: 2px 5px 5px 5px #88888873;
     border-radius: 5px;
+    background-color: white;
 }
 
 .pelicula-poster {
