--- a/src/app/componentes/inicio/inicio.component.css
+++ b/src/app/componentes/inicio/inicio.component.css
@@ -17,7 +17,7 @@
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: bold;
-    font-size: 56px;
+    font-size: 45px;
     color: #FFFFFF;
   }
 
@@ -25,7 +25,7 @@
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 32px;
+    font-size: 25px;
     color: #FFFFFF;
     padding-top: 8px;
   }
@@ -78,8 +78,9 @@
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: bold;
-    font-size: 36px;
+    font-size: 30px;
     color: #000000;
+    margin-bottom: 30px;
   }
 
   .PopularMovies a {
@@ -103,7 +104,7 @@
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: bold;
-    font-size: 36px;
+    font-size: 30px;
     color: #FFFFFF;
   }
 
