se añadio la ruta de registro de usuario al header

--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -5,7 +5,7 @@
             <a class = "link" routerLink = "/proximos-estrenos">Próximos estrenos</a>
         </div>
         <div class = "header-right">
-            <a class = "link" routerLink = "/iniciar-sesion">Iniciar sesión</a> &nbsp;  
+            <a class = "link" routerLink = "/registro">Registrarse</a> &nbsp;  
         </div>
     </nav>
 </div>
