--- a/src/app/componentes/detalles-pelicula/detalles-pelicula.component.html
+++ b/src/app/componentes/detalles-pelicula/detalles-pelicula.component.html
@@ -2,14 +2,14 @@
 <div>
   <div class="bgimg border"
        [ngStyle]="{'background-image': 'url(//image.tmdb.org/t/p/w500/'+pelicula.backdrop_path+')'}">
-    <section class="container-fluid">
+    <section class="container-fluid" style="width: 100%">
       <div class="container detalles">
         <div class="row">
-          <div class="col-4">
+          <div class="col-5" style="padding-right: 30px">
             <img src="//image.tmdb.org/t/p/w500/{{pelicula.poster_path}}" alt="poster" class="poster">
 
           </div>
-          <div class="col-8">
+          <div class="col-7">
             <section id="detallesDatos">
               <div class="titulo">
                 <h2>
@@ -17,51 +17,23 @@
                   <span> {{pelicula.release_date}} </span>
                 </h2>
                 <div class="row">
-                  <span class="col" id="clasificacion">clasificacion</span>
+                  <span class="col" id="clasificacion">Géneros:</span>
                   <span class="col" id="release">{{pelicula.release_date}}</span>
                   <div *ngFor="let item of generos">
                     <span class="col" id="generos">{{item.name}}</span>
                   </div>
                   <span class="col" id="duracion">{{pelicula.runtime}} min</span>
+
                 </div>
 
               </div>
 
-              <ul class="row acciones">
-                <div>
-                  <div class="progress" attr.data-percentage="{{pelicula.vote_average*10}}">
-                    <span class="progress-left">
-                      <span class="progress-bar"></span>
-                    </span>
-                    <span class="progress-right">
-                      <span class="progress-bar"></span>
-                    </span>
-                    <div class="progress-value">
-                      <div>
-                        {{pelicula.vote_average*10}}%<br>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="boton">
-                  <button class="btn btn-outline-light" (click)='agregarFavorito()' disabled>
-                    Agregar a
-                    Favoritos
-                  </button>
-                </div>
-                <div class="boton">
-                  <button class="btn btn-outline-light" (click)="reproducirTrailer()" disabled>
-                    Reproducir
-                    Trailer
-                  </button>
-                </div>
-              </ul>
-              <div>
+              <div class="row">
                 <h3>Sipnosis</h3>
                 <div class="sipnosis">
                   <span>{{pelicula.overview}}</span>
                 </div>
+                <br /><br />
                 <div class="personal">
                   <div *ngFor="let item of crew">
                     <div *ngIf="item.job==='Director'">
@@ -80,6 +52,51 @@
                   </div>
                 </div>
               </div>
+              <div style="display: flex; flex-direction:row">
+                <div class="MVotos">
+                  <div>
+                    <p>Media de votos</p>
+                    <div class="progress" attr.data-percentage="{{pelicula.vote_average*10}}">
+                      <span class="progress-left">
+                        <span class="progress-bar"></span>
+                      </span>
+                      <span class="progress-right">
+                        <span class="progress-bar"></span>
+                      </span>
+                      <div class="progress-value">
+                        <div>
+                          {{pelicula.vote_average*10}}%<br>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div style="float: right; padding-left: 300px">
+                  <p>QR para esta película</p>
+                  <img src="http://api.qrserver.com/v1/create-qr-code/?data=http://localhost:4200/detalles?movieId={{movieId}}&size=100x100" />
+                </div>
+                <div style="float: right" class="acciones">
+                  <div class="boton">
+                    <button class="btn btn-outline-light" (click)='agregarFavorito()' disabled>
+                      Agregar a
+                      Favoritos
+                    </button>
+                  </div>
+                  <div class="boton">
+                    <button class="btn btn-outline-light" (click)="reproducirTrailer()" disabled>
+                      Reproducir
+                      Trailer
+                    </button>
+                  </div>
+                  <div class="boton">
+                    <button class="btn btn-outline-light" onclick="window.print()">
+                      Descargar detalles en PDF
+                    </button>
+                  </div>
+                </div>
+              </div>
+              
+
             </section>
           </div>
         </div>
