add donadores api y oauth

--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -3,6 +3,7 @@
         <div class = "header-left">
             <a routerLink = "/" routerLinkActive = "active"><img src="assets/Filmopedia.png"></a>
             <a class = "link" routerLink = "/proximos-estrenos">Próximos estrenos</a>
+            <a class = "link" routerLink = "/Api-Donadores" style="margin-left: 20px;">Donadores</a>
         </div>
         <div class = "header-right">
             <a class = "link" routerLink = "/registro">Registrarse</a> &nbsp;  
