--- a/src/app/componentes/detalles-pelicula/detalles-pelicula.component.html
+++ b/src/app/componentes/detalles-pelicula/detalles-pelicula.component.html
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="boton">
-                  <button class="btn btn-outline-light" (click)='agregarFavorito()' disabled>
+                  <button type="submit" class="btn btn-outline-light" (click)='agregarFavorito()'>
                     Agregar a
                     Favoritos
                   </button>
