--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -8,7 +8,7 @@
       Contraseña<br>
       <input [class.is-invalid]="password.invalid && password.touched" type="password" class="form-control" formControlName="password"><br>
 
-      <button [disabled]="loginForm.invalid" class="buttonxd" type="submit" style="display: block; margin: 0 auto;">Registrarse</button>
+      <button [disabled]="loginForm.invalid" class="buttonxd" type="submit" style="display: block; margin: 0 auto;">Ingresar</button>
   
       <p></p>
       <!--  {{registroForm.value | json}} -->
